Tech debt upgrade (#262)
* upgrade weaver

* update github action

* add explicit jsonld dependency