@@ -1,6 +1,6 @@
 package edu.tamu.app.controller;
 
-import static org.junit.Assert.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertEquals;
 
 import java.io.IOException;
 import java.util.ArrayList;
@@ -8,7 +8,7 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 
-import org.junit.Test;
+import org.junit.jupiter.api.Test;
 
 import com.fasterxml.jackson.databind.JsonNode;
 import com.fasterxml.jackson.databind.node.JsonNodeFactory;
@@ -22,32 +22,32 @@ public class ProjectControllerTest extends AbstractControllerTest {
     @Test
     public void testGetProjects() throws Exception {
         response = projectController.getProjects();
-        assertEquals(" The response was not successful ", ApiStatus.SUCCESS, response.getMeta().getStatus());
+        assertEquals(ApiStatus.SUCCESS, response.getMeta().getStatus(), " The response was not successful ");
         @SuppressWarnings("unchecked")
         List<Project> list = (List<Project>) response.getPayload().get("ArrayList<Project>");
-        assertEquals(" There were no projects in the list ", mockProjectList.size(), list.size());
+        assertEquals(mockProjectList.size(), list.size(), " There were no projects in the list ");
     }
 
     @Test
     public void testPublicBatch() throws Exception {
         response = projectController.publishBatch(TEST_PROJECT1.getId(), 1l);
-        assertEquals(" The response was successful ", ApiStatus.ERROR, response.getMeta().getStatus());
-        assertEquals(" The response message was a successful one ", "There was an error with the batch publish", response.getMeta().getMessage());
+        assertEquals(ApiStatus.ERROR, response.getMeta().getStatus(), " The response was successful ");
+        assertEquals("There was an error with the batch publish", response.getMeta().getMessage(), " The response message was a successful one ");
 
     }
 
     @Test
     public void testAddFieldProfile() throws Exception {
         JsonNode data = getFieldProfileData();
-        response = projectController.addFieldProfile(new Long(1L), data);
-        assertEquals(" The Field Profile was added ", ApiStatus.SUCCESS, response.getMeta().getStatus());
+        response = projectController.addFieldProfile(Long.valueOf(1L), data);
+        assertEquals(ApiStatus.SUCCESS, response.getMeta().getStatus(), " The Field Profile was added ");
     }
 
     @Test
     public void testUpdateFieldProfile() throws Exception {
         JsonNode data = getFieldProfileData();
-        response = projectController.updateFieldProfile(new Long(1L), data);
-        assertEquals(" The Field Profile was updated ", ApiStatus.SUCCESS, response.getMeta().getStatus());
+        response = projectController.updateFieldProfile(Long.valueOf(1L), data);
+        assertEquals(ApiStatus.SUCCESS, response.getMeta().getStatus(), " The Field Profile was updated ");
     }
 
     private JsonNode getFieldProfileData() {
@@ -66,7 +66,7 @@ public class ProjectControllerTest extends AbstractControllerTest {
     @Test
     public void testSyncDocuments() throws IOException {
         response = projectController.syncDocuments(TEST_PROJECT1.getId());
-        assertEquals(" The response was not successful ", ApiStatus.SUCCESS, response.getMeta().getStatus());
+        assertEquals(ApiStatus.SUCCESS, response.getMeta().getStatus(), " The response was not successful ");
     }
 
 }
